--- a/src/app/pages/materials-asm1/materials-asm1.component.html
+++ b/src/app/pages/materials-asm1/materials-asm1.component.html
@@ -36,6 +36,10 @@
               <i class="material-icons">download</i>
               Tải Template Tồn kho
             </a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="exportToExcel()">
+              <i class="material-icons">file_download</i>
+              Export to Excel
+            </a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="javascript:void(0)" (click)="downloadFIFOReportASM1()">
               <i class="material-icons">warning</i>
